# flibusta-mcp

./: .gitignore  CLAUDE.md  README.md  config.py  construct.py  flibusta_mcp.py  mcp_config.json  pyproject.toml
.claude/: settings.local.json
models/: __init__.py  book.py
services/: client.py  parser.py  service.py
test_data/: author_5803_by_date.html  author_5803_default.html  author_5803_series_sample.html  book_727250.html  search_stiven_king.html
tests/: test_client_simple.py  test_parser.py  test_series_parser.py
